<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_update_selected"
        android:icon="@drawable/ic_sync"
        android:title="@string/local_update_selected"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_push_selected"
        android:icon="@drawable/ic_cloud_upload"
        android:title="@string/local_push_selected"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/discover_select_all"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_fetch_selected"
        android:title="@string/local_fetch_selected"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/discover_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_update_all"
        android:title="@string/local_update_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new_repo"
        android:title="@string/local_menu_new_repo"
        app:showAsAction="never" />
</menu>
