<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/discover_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_new_file"
        android:icon="@drawable/ic_note_add"
        android:title="@string/files_new_file"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_new_folder"
        android:icon="@drawable/ic_create_new_folder"
        android:title="@string/files_new_folder"
        app:showAsAction="ifRoom" />
</menu>
